--- a/themes/default/health/index.html
+++ b/themes/default/health/index.html
@@ -18,72 +18,68 @@
                         <h4 class="page-title"> Health Overview </h4>
 
                         <div class="row mt-5">
+                            <div class="col-12">
+                                <div class="card-deck">
 
-                            <!-- TOTAL SPORTS -->
-                            <div class="col-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        Total Students
+                                    <div class="card">
+                                        <div class="card-header">
+                                            Total Students
+                                        </div>
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{ student.total.all }}</h5>
+                                            <p class="card-text">
+                                                Male - <span class="text-success"> <i class="la la-male"></i> {{ student.total.male }} </span><br/>
+                                                Female - <span class="text-success"> <i class="la la-female"></i> {{ student.total.female }} </span>
+                                            </p>
+                                            <a href="{{ app.url}}/student" class="btn btn-xs btn-primary p-2">view details</a>
+                                        </div>
                                     </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ student.total.all }}</h5>
-                                        <p class="card-text">
-                                            Male - <span class="text-success"> <i class="la la-male"></i> {{ student.total.male }} </span><br/>
-                                            Female - <span class="text-success"> <i class="la la-female"></i> {{ student.total.female }} </span>
-                                        </p>
-                                        <a href="{{ app.url}}/student" class="btn btn-xs btn-primary p-2">view details</a>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <!-- TOTAL COACHES -->
-                            <div class="col-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <span class="text-success">Total Students Average BMI</span>
+                                    <!-- TOTAL COACHES -->
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <span class="text-success">Total Students Average BMI</span>
+                                        </div>
+                                        <div class="card-body">
+                                            <h5 class="card-title"><span class="text-success">{{ student.average.bmi.all }}</span></h5>
+                                            <p class="card-text">
+                                                Male - <span class="text-success"> <i class="la la-male"></i> {{ student.average.bmi.male }}</span><br/>
+                                                Female - <span class="text-success"> <i class="la la-female"></i> {{ student.average.bmi.female }} </span>
+                                            </p>
+                                            <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                        </div>
                                     </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title"><span class="text-success">{{ student.average.bmi.all }}</span></h5>
-                                        <p class="card-text">
-                                            Male - <span class="text-success"> <i class="la la-male"></i> {{ student.average.bmi.male }}</span><br/>
-                                            Female - <span class="text-success"> <i class="la la-female"></i> {{ student.average.bmi.female }} </span>
-                                        </p>
-                                        <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <!-- STUDENTS DOING SPORTS -->
-                            <div class="col-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <span class="text-warning">Total Students Above Average BMI</span>
+                                    <!-- STUDENTS DOING SPORTS -->
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <span class="text-warning">Total Students Above Average BMI</span>
+                                        </div>
+                                        <div class="card-body">
+                                            <h5 class="card-title"><span class="text-warning">{{ student.above.bmi.all }}</span></h5>
+                                            <p class="card-text">
+                                                Male - <span class="text-warning"> <i class="la la-male"></i> {{ student.above.bmi.male }} </span><br/>
+                                                Female - <span class="text-warning"> <i class="la la-female"></i> {{ student.above.bmi.female }} </span>
+                                            </p>
+                                            <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                        </div>
                                     </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title"><span class="text-warning">{{ student.above.bmi.all }}</span></h5>
-                                        <p class="card-text">
-                                            Male - <span class="text-warning"> <i class="la la-male"></i> {{ student.above.bmi.male }} </span><br/>
-                                            Female - <span class="text-warning"> <i class="la la-female"></i> {{ student.above.bmi.female }} </span>
-                                        </p>
-                                        <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
-                                    </div>
-                                </div>
-                            </div> 
 
-                            <!-- STUDENTS DOING SPORTS -->
-                            <div class="col-3">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <span class="text-danger">Total Students Below Average BMI</span>
+                                    <!-- STUDENTS DOING SPORTS -->
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <span class="text-danger">Total Students Below Average BMI</span>
+                                        </div>
+                                        <div class="card-body">
+                                            <h5 class="card-title"><span class="text-danger">{{ student.below.bmi.all }}</span></h5>
+                                            <p class="card-text">
+                                                Male - <span class="text-danger"> <i class="la la-male"></i> {{ student.below.bmi.male }} </span><br/>
+                                                Female - <span class="text-danger"> <i class="la la-female"></i> {{ student.below.bmi.female }} </span>
+                                            </p>
+                                            <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
+                                        </div>
                                     </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title"><span class="text-danger">{{ student.below.bmi.all }}</span></h5>
-                                        <p class="card-text">
-                                            Male - <span class="text-danger"> <i class="la la-male"></i> {{ student.below.bmi.male }} </span><br/>
-                                            Female - <span class="text-danger"> <i class="la la-female"></i> {{ student.below.bmi.female }} </span>
-                                        </p>
-                                        <a href="{{ app.url}}/health/search" class="btn btn-xs btn-primary p-2">view details</a>
-                                    </div>
+                                
                                 </div>
                             </div>
 
@@ -98,11 +94,14 @@
                         <!-- TITLE -->
                         <h4 class="page-title mb-4">BMI Graph</h4>
 
-                        <div class="col-12">
-                            <div class="row">
-                                <div class="col chart-bg pt-3" id="chart-1"></div>
-                                <div class="col chart-bg pt-3" id="chart-2"></div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="chart-bg pt-3" id="chart-1"></div>
                             </div>
+                            <div class="col-6">
+                                <div class="chart-bg pt-3" id="chart-2"></div>    
+                            </div>
+                            
                         </div>
 
                     </section>
