--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -47,7 +47,10 @@
                                                 <td> {{ class.grade.name }} </td>
                                                 <td> {{ class.name }} </td>
                                                 <td> {{ class.staff.initials }} {{ class.staff.surname }}</td>
-                                                <td><button class="btn btn-sm btn-danger" onclick="removeclass('class.id')">remove</button></td>
+                                                <td>
+                                                    <button class="btn btn-sm btn-warning" onclick="invokeClassEditModal('{{class.id}}','{{class.name}}','{{class.grade.id}}','{{class.staff.id}}')">edit</button>
+                                                    <button class="btn btn-sm btn-danger" onclick="removeclass('{{class.id}}')"><i class="la la-trash"></i></button>
+                                                </td>
                                             </tr>
                                             {% endfor %} 
                                         </tbody>  
@@ -392,8 +395,13 @@
                         <div class="col-12">
                             <div class="form-group">
                                 <label for="tic">Teacher in Charge</label>
-                                <input type="text" class="form-control" id="tic" maxlength="6"/>
-                                <small id="ticHelp" class="form-text text-muted">Enter Employee ID</small>
+                                <select class="form-control selectpicker show-tick" data-live-search="true" data-size="5" id="tic">
+                                        <option value="">- select -</option>
+                                    {% for staff in staffs %}
+                                        <option value="{{ staff.id }}">{{ staff.name }}</option>
+                                    {% endfor %}
+                                </select>
+                                
                             </div>
                         </div>
 
@@ -409,6 +417,59 @@
         </div>
     </div>
     <!-- END : MODAL : ADD CLASS -->
+
+    <!-- START : MODAL : EDIT CLASS -->
+    <div class="modal fade" id="modal_editclass" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title">EDIT CLASS</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+
+                <div class="modal-body">
+                    <input type="hidden" id="modal-edit-class-id" value="" />
+
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label for="class">Class Name</label>
+                            <input type="text" class="form-control text-capitalize" id="modal-edit-class-name" maxlength="2" value=""/>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label for="grade_id">Select Grade</label>
+                            <select class="form-control" id="modal-edit-class-grade">
+                                {% for grade in grades %}
+                                    <option value="{{ grade.id }}">{{ grade.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label for="tic">Teacher in Charge</label>
+                            <select class="form-control selectpicker show-tick" data-live-search="true" data-size="5" id="modal-edit-class-staff">
+                                <option value="">- select -</option>
+                                {% for staff in staffs %}
+                                    <option value="{{ staff.id }}">{{ staff.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onClick="editclass();">Save changes</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- END : MODAL : EDIT CLASS -->
 
     <!-- START : MODAL : ADD GRADE -->
     <div class="modal fade" id="modal_addgrade" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -717,6 +778,53 @@
         }
         // END : ADD A CLASS
 
+        // INVOKE EDIT MODAL
+        invokeClassEditModal = (id, name, grade, staff) => {
+            $("#modal-edit-class-id").val(id)
+            $("#modal-edit-class-name").val(name)
+            $("#modal-edit-class-grade").val(grade)
+            $("#modal-edit-class-staff").val(staff)
+            $("#modal_editclass").modal("show")
+        }
+
+        // START : EDIT CLASS
+        editclass = () => {
+
+        // PAYLOAD
+        var formData = new FormData;
+        formData.append('id', $("#modal-edit-class-id").val())
+        formData.append('name', $("#modal-edit-class-name").val())
+        formData.append('grade', $("#modal-edit-class-grade").val())
+        formData.append('staff', $("#modal-edit-class-staff").val())
+
+        // REQUEST
+        $.ajax({
+            url: "{{ app.url }}/school/ajax_editclass",
+            method: 'POST',
+            data: formData,
+            processData: false,
+            contentType: false,
+            dataType: 'json',
+            success: (res) => {
+                
+                if ( res.status == 'success' ) {
+                    alertify.alert("Success", "Class Edited successfully ... ").set('onok', function() {
+                        location.reload();
+                    })
+                } else {
+                    console.log(res);
+                    alertify.alert("Failed", res.message);
+                }
+            },
+            error: (e) => {
+                alertify.alert("Error", "Something went wrong ... ");
+                console.log(e.responseText)
+            }
+        })
+
+        }
+        // END : EDIT CLASS
+
         // START : REMOVE CLASS
         removeclass = (class_id) => {
 
@@ -740,7 +848,7 @@
                         })
                     } else {
                         console.log(res);
-                        alertify.alert("Failed", res.error);
+                        alertify.alert("Failed", res.message);
                     }
                 },
                 error: (e) => {
